# observatory

./: .gitignore  Cargo.toml  README.md  observatory.toml.example
.github/workflows/: observatory.yml  rust.yml
src/: application.rs  chain_monitor.rs  chain_state.rs  client_manager.rs  commands.rs  config.rs  datadog.rs  lib.rs  main.rs  pager.rs
src/commands/: start.rs
tests/: acceptance.rs
