[package]
name = "observatory"
version = "0.0.0"
edition = "2021"

[dependencies]
abscissa_core = "0.7"
abscissa_tokio = "0.7"
clap = "4"
futures = "0.3"
hostname = "0.3"
hyper = "1.0"
hyper-tls = "0.5"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0"
tendermint = "0.34"
tendermint-rpc = { version = "0.34", features = ["http-client"] }
thiserror = "1"
tokio = "1"
tower = { version = "0.4", features = ["buffer", "util"] }
tracing = "0.1"

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"
