[package]
name = "observatory"
version = "0.0.0"
edition = "2021"

[dependencies]
abscissa_core = "0.8"
abscissa_tokio = "0.8"
clap = "4"
futures = "0.3"
hostname = "0.4"
hyper = "0.14"
hyper-tls = "0.5"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0"
tendermint = "0.40"
tendermint-rpc = { version = "0.40", features = ["http-client"] }
thiserror = "2"
tokio = "1"
tower = { version = "0.5", features = ["buffer", "util"] }
tracing = "0.1"

[dev-dependencies]
abscissa_core = { version = "0.8", features = ["testing"] }
once_cell = "1.20"
